force-app/main/default/objects/Account/fields/Address_Line1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line1__c</fullName>
    <label>House Name / No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>