force-app/main/default/objects/Account/fields/Address_Line2__c.field-meta.xml
<CustomField>
    <fullName>Address_Line2__c</fullName>
    <label>Place</label>
    <length>255</length>
    <type>Text</type>
</CustomField>