force-app/main/default/objects/Account/fields/Address_Line3__c.field-meta.xml
<CustomField>
    <fullName>Address_Line3__c</fullName>
    <label>Address Line3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>