force-app/main/default/objects/Account/fields/Blocked_Account__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blocked Account</label>
    <type>Checkbox</type>
</CustomField>