force-app/main/default/objects/Account/fields/Category_Interest__c.field-meta.xml
<CustomField>
    <fullName>Category_Interest__c</fullName>
    <label>Category Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Roofing Solution and Clay products</fullName>
            </value>
            <value>
                <fullName>Tiles</fullName>
            </value>
            <value>
                <fullName>Sanitary ware</fullName>
            </value>
            <value>
                <fullName>Adhesives</fullName>
            </value>
            <value>
                <fullName>Imported Marble, Granite and Natural Stones</fullName>
            </value>
            <value>
                <fullName>Surface care</fullName>
            </value>
            <value>
                <fullName>Timber / Wooden flooring</fullName>
            </value>
            <value>
                <fullName>Glass Bricks</fullName>
            </value>
            <value>
                <fullName>Lighting Solutions</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Fitting Solutions</fullName>
            </value>
            <value>
                <fullName>Paints</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>