force-app/main/default/objects/Account/fields/Communication_Channel__c.field-meta.xml
<CustomField>
    <fullName>Communication_Channel__c</fullName>
    <label>Communication Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>