force-app/main/default/objects/Account/fields/Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code__c</fullName>
    <displayFormat>SF-{0000}</displayFormat>
    <label>Customer_Code</label>
    <type>AutoNumber</type>
</CustomField>