force-app/main/default/objects/Account/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <displayFormat>SA-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Customer Number</label>
    <type>AutoNumber</type>
</CustomField>