force-app/main/default/objects/Account/fields/Customer_Number_Ext__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number_Ext__c</fullName>
    <displayFormat>SF-{0000}</displayFormat>
    <label>Customer_Number_Ext</label>
    <type>AutoNumber</type>
</CustomField>