force-app/main/default/objects/Account/fields/GST_Type__c.field-meta.xml
<CustomField>
    <fullName>GST_Type__c</fullName>
    <label>GST Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>gstRegularTDSISD</fullName>
                <label>Regular/TDS/ISD</label>
            </value>
            <value>
                <fullName>gstCompositionLevy</fullName>
                <label>Composition Levy</label>
            </value>
            <value>
                <fullName>gstCasualTaxablePerson</fullName>
                <label>Casual Taxable Person</label>
            </value>
            <value>
                <fullName>gstGoverDepartPSU</fullName>
                <label>Government Department or PSU</label>
            </value>
            <value>
                <fullName>gstNonResidentTaxablePerson</fullName>
                <label>Non Resident Taxable Person</label>
            </value>
            <value>
                <fullName>gstUNAgencyEmbassy</fullName>
                <label>UN Agency or Embassy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>