force-app/main/default/objects/Account/fields/Payment_terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_terms__c</fullName>
    <label>Payment terms</label>
    <length>200</length>
    <type>Text</type>
</CustomField>