force-app/main/default/objects/Account/fields/POC_Number__c.field-meta.xml
<CustomField>
    <fullName>POC_Number__c</fullName>
    <label>POC Number</label>
    <type>Phone</type>
</CustomField>