force-app/main/default/objects/Account/fields/Pushed_to_SAP__c.field-meta.xml
<CustomField>
    <fullName>Pushed_to_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pushed to SAP</label>
    <type>Checkbox</type>
</CustomField>