force-app/main/default/objects/Account/fields/SAP_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>SAP_Sync_Status__c</fullName>
    <formula>IF(Pushed_to_SAP__c,
&quot;Success&quot;,
&quot;Failed&quot;)</formula>
    <label>SAP Sync Status</label>
    <type>Text</type>
</CustomField>