force-app/main/default/objects/Account/validationRules/GST_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>GST_Number</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
				AND(GST_Number__c != null ,
       NOT(REGEX(GST_Number__c,&quot;^([0][1-9]|[1-2][0-9]|[3][0-7])([a-zA-Z]{5}[0-9]{4}[a-zA-Z]{1}[1-9a-zA-Z]{1}[zZ]{1}[0-9a-zA-Z]{1})+$&quot;))
      )
,TRUE,FALSE
  )</errorConditionFormula>
    <errorDisplayField>GST_Number__c</errorDisplayField>
    <errorMessage>Enter valid GST Number</errorMessage>
</ValidationRule>