force-app/main/default/objects/Account/validationRules/PAN_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>PAN_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(PAN_Number__c ) ) ,NOT( REGEX( PAN_Number__c , &quot;[A-Z]{5}[0-9]{4}[A-Z]{1}&quot;) ))</errorConditionFormula>
    <errorDisplayField>PAN_Number__c</errorDisplayField>
    <errorMessage>Enter Valid PAN Number</errorMessage>
</ValidationRule>