force-app/main/default/objects/Account/validationRules/Phone_should_be_10_digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_should_be_10_digits</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Country__c , &quot;India&quot;),
    NOT(ISBLANK(Phone)),
    NOT(REGEX(Phone , &quot;^[0-9]{10}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Phone Number must be 10 digits</errorMessage>
</ValidationRule>