force-app/main/default/objects/Account/listViews/Customers_by_Location.listView-meta.xml
<ListView>
    <fullName>Customers_by_Location</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>KL,Manipur</value>
    </filters>
    <label>Customers by Location</label>
</ListView>